kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-api-service
spec:
  selector:
    app: ping-pong-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
